# ve-io-python-config-base

./: .pre-commit-config.yaml  README.md  pyproject.toml
