[project]
name = "ve-io-python-config-base"
version = "0.1.0"
description = ""
authors = [
    {name = "Wesley Steve",email = "wesley.silva23@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "ve_io_python_config_base", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
