[project]
name = "ve-io-python-config-base"
version = "0.1.0"
description = ""
authors = [
    {name = "Wesley Steve",email = "wesley.silva23@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pre-commit (>=4.5.1,<5.0.0)"
]

[tool.poetry]
packages = [{include = "ve_io_python_config_base", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "blue (>=0.9.1,<0.10.0)"
]
